# LUDO-Algo

./: .gitignore  API_DOCS.md  Board.cpp  Board.h  CMakeLists.txt  Computer.cpp  Computer.h  Constants.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  README.md  benchmark.cpp  main.cpp  server.cpp
web/: index.html  script.js  style.css
